# http_test

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  Shuttle.toml  deny.toml  http-client.js  http-client_bg.wasm  index.html  sw.js
.github/workflows/: egui_pages_deploy.yml  general.yml  pages.yml  rust.yml  wasm.yml
assets/: manifest.json  sw.js
crates/client/: Cargo.toml  Trunk.toml  index.html
crates/client/src/: lib.rs  main.rs
crates/client/src/app/: ui_request_test.rs
crates/client/src/app/ui_request_test/: cookies.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs  routes.rs
crates/server/src/routes/: cookies.rs
src/: app.rs  lib.rs  main.rs
src/app/: ui_page.rs  ui_request_test.rs
src/app/ui_request_test/: response_data.rs
