[workspace]
resolver = "2"
members = [
  "crates/client",
]

[workspace.dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
eframe = { version = "0.30", default-features = false }
egui = "0.30"
egui_extras = "0.30.0"
log = "0.4.22"
reqwest-cross = { git = "https://github.com/c-git/reqwest-cross", branch = "develop" }
serde = "1"
tokio = { version = "1.42.0", default-features = false }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"

[profile.release]
opt-level = 2 # fast and small wasm

# https://doc.rust-lang.org/cargo/reference/overriding-dependencies.html#testing-a-bugfix
[patch.crates-io]
