[package]
name = "http-client"
version = "0.1.0"
authors = ["One <one.bgz1@gmail.com>"]
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
eframe = { workspace = true, features = ["accesskit", "default_fonts", "glow", "persistence", "wayland", "x11"] }
egui.workspace = true
egui_extras.workspace = true
reqwest-cross = { workspace = true, features = ["egui", "cookies"] }
serde = { workspace = true, features = ["derive"] }
tracing.workspace = true

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
log.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true # to access the DOM (to hide the loading text)
