[package]
name = "http-test"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
actix-files = "0.6.6"
actix-web = "4.3.1"
anyhow.workspace = true
futures-util = "0.3.31"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.134"
shuttle-actix-web = "0.49.0"
shuttle-runtime = { version = "0.49.0", default-features = false }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
