[package]
name = "http-test-server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
actix-files.workspace = true
actix-web.workspace = true
anyhow.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
shuttle-actix-web.workspace = true
shuttle-runtime.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
